@@ -1,4 +1,5 @@
 DIST Aptana_Studio_3_Setup_Linux_x86_3.0.4.zip 119725655 RMD160 c77d55e8e1e254248d10f11900b6b67a22297857 SHA1 45db165a2e2c1dd860d1d6f431d9ef350f75b82f SHA256 5ea5c6e8b21f25550e903a32e8f29fa5014e451f992d11f9b80332e757ffdc5f
 DIST Aptana_Studio_3_Setup_Linux_x86_64_3.0.4.zip 121841124 RMD160 14033a6426fc2f8f96ee2ba01915724290095880 SHA1 0be6d478b3a068e3ca4031b98529eb242cbe4c33 SHA256 bb45132cc34d76e6e53a527359c6569e256d9e26e22567f22036ae6ff5a70412
 EBUILD aptana-studio-bin-3.0.4-r2.ebuild 1527 RMD160 e6fe1588f8a23e41e79b4a5216db0c3b71e06f78 SHA1 e6aa097b108394d32d529f85340a3088fbb65901 SHA256 96bc10f37bdb68f507b2e4196a1c20bd7d8cf798165ad4b733db078e4bc00ae0
-MISC ChangeLog 834 RMD160 1cb5a15bec314be60d4f7b750a97372386e3151f SHA1 26dfea11d9d04e5a05f9c8590721df49f5067f43 SHA256 6f6d6ca13f73e7ff01c8f9697a5fd07ca1f8e2d4014420704761ee6214dbd482
+EBUILD aptana-studio-bin-3.0.4-r3.ebuild 1541 RMD160 eaedb3e9a2508f9f635657f1d700e89b93cd6088 SHA1 15b30f525d6d8d8116e67328de741289323b9e62 SHA256 8783391cbae60974f01074becc8e5afb7e4da2483be8293b07fcb21772541ffd
+MISC ChangeLog 995 RMD160 3b39c3dd804105a82d7c236d38379b462a9b8766 SHA1 c8aad1bf9ecb5e186502011e5e11997635ef6bc4 SHA256 1f6b8b1945feec2d55d0d40b3a94f98c02520b8bc377f9d2a9e851f95a005ec8
