@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*aptana-studio-bin-3.0.4-r3 (22 Aug 2011)
+
+  22 Aug 2011; Denis Misiurca <infoman1985@gmail.com>
+  +aptana-studio-bin-3.0.4-r3.ebuild:
+  Final dependencies fix
+
 *aptana-studio-bin-3.0.4-r2 (22 Aug 2011)
 
   22 Aug 2011; Denis Misiurca <infoman1985@gmail.com>
